<resources>
    <string name="register">Register</string>
    <string name="go">Go</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="logi_or_register">name or email</string>
    <string name="pass">password</string>
    <string name="forgit_pass">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="app_name" translatable="false">CutShort</string>
    <string name="_8">Must contain char and more than 8</string>
    <string name="update_pass">Update Password</string>
    <string name="email">Email :</string>
    <string name="send_link">Send SMS</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="update">Update</string>
    <string name="reset_password">Reset The Password</string>
    <string name="reset_pass1_hint">Enter your phone to your account</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome2">Welcome</string>
    <string name="register_txt2">Hope you to find your job short</string>
    <string name="name">Name : </string>
    <string name="nicName">Nicename</string>
    <string name="used">Used</string>
    <string name="avilable">Avilable</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="phone">Phone no :</string>
    <string name="nationality">Nationality :</string>
    <string name="job">Job :</string>
    <string name="term_and_policy">Agree with terms and policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About App</string>
    <string name="term">Term and Policy</string>
    <string name="share">Share App</string>
    <string name="copy">"Copy of Contract"</string>
    <string name="lang">Language</string>
    <string name="option">Optinal</string>
    <string name="confirm">Confirm</string>
    <string name="send">Send</string>
    <string name="no_images">No Images</string>
    <string name="time_out">time out</string>
    <string name="sent">Send done</string>
    <string name="sent_error">Send error</string>
    <string name="pls_type_new_phone">Type new phone nomber</string>
    <string name="reset_phone_successfuly">Phone change successfully</string>
    <string name="error_try_again">Error please try again</string>
    <string name="fill_fields">Please fill in all fields</string>
    <string name="login_error">Login information error, try again</string>
    <string name="chose_country">Please select a country</string>
    <string name="choose_dept">Please select a section</string>
    <string name="choose_sub_dept">Please select a subsection</string>
    <string name="choose_ads_region">Please choose the correct site to display your ads</string>
    <string name="choose_country">Choose the country..</string>
    <string name="chose_sub_dept2">Choose a subsection</string>
    <string name="ok">Ok</string>
    <string name="no_ads">Sorry, no ads found</string>
    <string name="cancel">Cancel</string>
    <string name="edt_value">You must specify a value for modification</string>
    <string name="report_abuse">Report abuse</string>
    <string name="phone_not_found">Phone number not found</string>
    <string name="contract_created">The contract has been created pending the approval of the advertiser</string>
    <string name="activate_ads">Activate the ads</string>
    <string name="stop_ads">Ad has been suspended</string>
    <string name="stop2">Pause advertising</string>
    <string name="activate_ads2">The ad has been activated</string>
    <string name="to_favorite">To my favourites</string>
    <string name="remove_from_fav">This ad has been removed from favourites</string>
    <string name="remove_fav2">Remove from favourites</string>
    <string name="add_fav2">This ad has been added to your favourites</string>
    <string name="main">Main</string>
    <string name="chats">Chats</string>
    <string name="ads_ads">Add Adds</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="add_ads_title">Submit a job application</string>
    <string name="add_ads_warrning">Choose three high-resolution images for your ad, and official documents are prohibited</string>
    <string name="type">Type of Request</string>
    <string name="type2">Type of Request : </string>
    <string name="transformatin">Conversion</string>
    <string name="who">applicant</string>
    <string name="personal">Personal</string>
    <string name="office">Office</string>
    <string name="name_ooffice">The name of the office or institution</string>
    <string name="name_ooffice2">The name of the office or institution : </string>
    <string name="office_address">Address of the office or institution by country</string>
    <string name="office_address2">Address of the office \n or institution by country : </string>
    <string name="name_owner">business owners name</string>
    <string name="name_owner2">business owners name : </string>
    <string name="birth">Date of Birth</string>
    <string name="birth2">Date of Birth : </string>
    <string name="job2">Job</string>
    <string name="experience">Years of Experience</string>
    <string name="choose_salary">Determine your monthly salary in US dollars</string>
    <string name="money_of_salary">The amount required for providing the profession</string>
    <string name="place_now">Where are you located now?</string>
    <string name="religion">Religion</string>
    <string name="muslim">Muslim</string>
    <string name="not_mislim">Other</string>
    <string name="sex">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="bio2">Add experiences and introduce yourself</string>
    <string name="add_phone">Add a direct contact number</string>
    <string name="same_reg_no">The same phone number registered in the account</string>
    <string name="new_no">Enter a new phone number for the advertisement only</string>
    <string name="housing_sp">For domestic workers</string>
    <string name="agree_add_ads">I am responsible for the correctness and accuracy of all my data that I will publish in my ad</string>
    <string name="post_ads">Post</string>
    <string name="_new">New</string>
    <string name="country_">Country</string>
    <string name="main_dept">main section</string>
    <string name="sub_dept_">Subsection</string>
    <string name="countios">continue</string>
    <string name="choose_right_region">Please choose the correct site to display your ads</string>
    <string name="pay_package">Payment Package</string>
    <string name="balance">Ads balance</string>
    <string name="my_adsss">my ads</string>
    <string name="_about">About</string>
    <string name="edt_3d_name">Edit the triple name</string>
    <string name="edt_pass_">Edit the password</string>
    <string name="edt_phone_">Change phone number</string>
    <string name="edt__job">Occupation change</string>
    <string name="prev_contracts">Previous Agreement Contracts</string>
    <string name="blocked_list">Banned List</string>
    <string name="delete_account">Delete account</string>
    <string name="current__pass">Current Password</string>
    <string name="_new_phone">Enter the new phone number</string>
    <string name="u_wel_recieve_msg">A message will be sent to your new number</string>
    <string name="insert_current_pass">Enter the password for your account</string>
    <string name="fragment_favorite_title">When the ad is finished, it will be automatically deleted from your favourites</string>
    <string name="pay_backage">Payment Packages</string>
    <string name="ads_duration">The duration of the advertisement is one day from the beginning of its exposure, and each advertisement is independent of the other</string>
    <string name="choose_your_package">Choose your favorite package</string>
    <string name="usa_10">1 ad USA 10</string>
    <string name="usa_40">5 ads USA 40</string>
    <string name="usa_70">10 ads USA 70</string>
    <string name="pay">Pay</string>
    <string name="job_">Occupation :</string>
    <string name="dollar_s">Monthly salary in US dollars : </string>
    <string name="travil_fees">Amount required to \n provide the profession : </string>
    <string name="sex__">Gender :</string>
    <string name="religion_">Religion :</string>
    <string name="region__">is online now at:</string>
    <string name="advans">It is thus characterized by</string>
    <string name="desc">Definition of : </string>
    <string name="pause_ads_det">Pause is calculated within the duration of the advertisement and will not cancel your advertisement only, it will light red and the advertisement will not end until after its actual period has expired</string>
    <string name="contact_with_ads_owner">Direct contact with the advertiser</string>
    <string name="report_ads">Report abuse</string>
    <string name="create_contract">make a deal</string>
    <string name="choose_s_">Choose</string>
    <string name="type_no">Type the number</string>
    <string name="in_deel">According to the agreement</string>
    <string name="travel_fees">travel procedures cost</string>
    <string name="no_thing">Nothing</string>
    <string name="add_done">Ad has been added</string>
    <string name="choose_dept___">Choose a section</string>
    <string name="read_more">read more..</string>
    <string name="exp_years">Years of Experience :</string>
    <string name="more_set">To explain:</string>
    <string name="confirm_phone_title">You must enter the confirmation code that was sent to your phone number</string>
    <string name="sendEmail">Send Email</string>
    <string name="sendWhatsapp">Whatsapp</string>
    <string name="confirmAc1">To verify the validity of the employment contract</string>
    <string name="confirmAc2">Official or authorized bodies have the right to verify the validity and integrity of the work contract data, approve and print it for a small fee.</string>
    <string name="contractNo">Enter the contract number</string>
    <string name="contractCode">Enter the contract code</string>
    <string name="confirm_logout">Are you sure you want to log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="edition_value_not_found">You must specify a value for modification</string>
    <string name="add_image_done">Profile picture added</string>
    <string name="cover_added">Cover photo added</string>
    <string name="edit_done">Edited successfully</string>
    <string name="edt__name">Name editing</string>
    <string name="_job_edit">Occupation change</string>
    <string name="_bio_edit">Edit description</string>
    <string name="contract">Contract</string>
    <string name="callus">Call us</string>
    <string name="block_">Block</string>
    <string name="unblock">Unblock</string>
    <string name="no_favorite">You have no items in favourites</string>
    <string name="_register">Register</string>
    <string name="no_list_found">No list found</string>
    <string name="click_again_exit">Click BACK again to exit</string>
    <string name="user_blocked">Added to black list successful</string>
    <string name="country_code">phone with coutry code</string>
    <string name="digit6error">6 digit code error</string>
    <string name="done_phone_changed">Phone number updated successfully</string>
    <string name="change_phonee">Change phone number</string>
    <string name="email_update_title">Email Update</string>
    <string name="email_update_sub_title">Insert current email and password first then type the new email</string>
    <string name="email_update_new_email">The new email</string>
    <string name="email_update_confirm">Confirm new email</string>
</resources>