<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="150dp"
    android:padding="@dimen/margin_normal_size"
    android:layout_margin="@dimen/margin_normal_size"
    android:background="@drawable/shape_btn_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:minHeight="150dp">
        <TextView
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/txt_normal_size"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/confirm_logout"
            android:gravity="center"/>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_normal_size"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes"
                android:layout_marginLeft="@dimen/margin_small_size"
                android:layout_marginRight="@dimen/margin_small_size"
                android:textSize="@dimen/txt_large_size"
                android:text="@string/yes"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_chat_edt_bg"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no"
                android:layout_marginLeft="@dimen/margin_small_size"
                android:layout_marginRight="@dimen/margin_small_size"
                android:textSize="@dimen/txt_large_size"
                android:text="@string/no"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/shape_chat_edt_bg"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>