<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bader.cutShort.badrjobs.Activity.EmailUpdate">

    <include layout="@layout/public_toolbar"
        android:id="@+id/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_small_size"
        android:background="@drawable/shape_container_lay_bg">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_large_size">
                <TextView
                    android:layout_marginTop="@dimen/margin_normal_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/txt_large_size"
                    android:text="@string/email_update_title"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_marginLeft="@dimen/margin_large_size"
                    android:layout_marginRight="@dimen/margin_large_size"
                    android:layout_marginTop="@dimen/margin_large_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/txt_normal_size"
                    android:text="@string/email_update_sub_title"
                    android:textColor="@android:color/black"/>



                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_normal_size"
                    android:text="@string/email_update_new_email"
                    android:textStyle="bold"/>
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="@dimen/margin_small_size"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardBackgroundColor="@color/grayCardEdt"
                    app:cardCornerRadius="@dimen/margin_normal_size">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <EditText
                            android:id="@+id/newEmail1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:background="@android:color/transparent"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_marginTop="@dimen/margin_large_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_normal_size"
                    android:text="@string/email_update_confirm"
                    android:textStyle="bold"/>
                <androidx.cardview.widget.CardView
                    android:layout_marginTop="@dimen/margin_small_size"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardBackgroundColor="@color/grayCardEdt"
                    app:cardCornerRadius="@dimen/margin_normal_size">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/newEmail2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textEmailAddress"
                            android:background="@android:color/transparent"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn"
                    android:layout_marginTop="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/update"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_large_size"
                    android:background="@drawable/shape_btn_bg"/>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/progressLay"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true">
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="visible"
            app:indicatorColor="@color/colorPrimary"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>